--- a/AppUsers.Web/AppUsers.Web.csproj
+++ b/AppUsers.Web/AppUsers.Web.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AppUsers.Domain.Infra\AppUsers.Domain.Infra.csproj" />
+    <ProjectReference Include="..\AppUsers.Domain.Services\AppUsers.Domain.Services.csproj" />
   </ItemGroup>
 
 </Project>
