--- a/AppUsers.Web/appsettings.Development.json
+++ b/AppUsers.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "AppUsersBD": "Server=localhost;Database=AppUsersBD;User Id=sa;Password=@Sql2019;MultipleActiveResultSets=true;Encrypt=yes;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
