--- a/AppUsers.Domain.Services/AppUsers.Domain.Services.csproj
+++ b/AppUsers.Domain.Services/AppUsers.Domain.Services.csproj
@@ -1,14 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AppUsers.Domain.Core\AppUsers.Domain.Interfaces.csproj" />
     <ProjectReference Include="..\AppUsers.Domain.Infra\AppUsers.Domain.Infra.csproj" />
+    <ProjectReference Include="..\AppUsers.Domain.Interfaces\AppUsers.Domain.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
